--- a/RyansAppFramework/src/_Experiments_/TryWithSeparators.fxml
+++ b/RyansAppFramework/src/_Experiments_/TryWithSeparators.fxml
@@ -10,33 +10,50 @@
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1000.0" style="-fx-background-color: #555555;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ToolBar prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #5577BB;">
-        <items>
-          <Button mnemonicParsing="false" text="New" />
-            <Button mnemonicParsing="false" text="Load" />
-            <Button mnemonicParsing="false" text="Save" />
-            <Button mnemonicParsing="false" text="Save As" />
-            <Button mnemonicParsing="false" text="Export" />
-            <Pane minWidth="0.0" prefWidth="500.0" />
-            <Button mnemonicParsing="false" text="Undo" />
-            <Button mnemonicParsing="false" text="Redo" />
-            <Button mnemonicParsing="false" text="About" />
-        </items>
-      </ToolBar>
-      <TabPane nodeOrientation="LEFT_TO_RIGHT" opacity="0.93" prefHeight="200.0" prefWidth="200.0" style="-fx-tab-min-height: 99; -fx-background-insets: 0, 0 0 1 0; -fx-background-color: #553377; -fx-text-fill: #96b946;" styleClass="*.tab-header-background" tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
+      <AnchorPane>
+         <children>
+            <GridPane style="-fx-background-color: #775566;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" />
+                  <ColumnConstraints hgrow="SOMETIMES" />
+                  <ColumnConstraints hgrow="SOMETIMES" />
+                  <ColumnConstraints hgrow="SOMETIMES" />
+                  <ColumnConstraints hgrow="SOMETIMES" />
+                  <ColumnConstraints hgrow="ALWAYS" />
+                  <ColumnConstraints hgrow="SOMETIMES" />
+                  <ColumnConstraints hgrow="SOMETIMES" />
+                  <ColumnConstraints hgrow="SOMETIMES" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+               <children>
+                <Button mnemonicParsing="false" text="New" />
+                  <Button mnemonicParsing="false" text="Load" GridPane.columnIndex="1" />
+                  <Button mnemonicParsing="false" text="Save" GridPane.columnIndex="2" />
+                  <Button mnemonicParsing="false" text="Save As" GridPane.columnIndex="3" />
+                  <Button mnemonicParsing="false" text="Export" GridPane.columnIndex="4" />
+                  <Button mnemonicParsing="false" text="Undo" GridPane.columnIndex="6" GridPane.halignment="RIGHT" />
+                  <Button mnemonicParsing="false" text="Redo" GridPane.columnIndex="7" GridPane.halignment="RIGHT" />
+                  <Button mnemonicParsing="false" text="About" GridPane.columnIndex="8" GridPane.halignment="RIGHT" />
+               </children>
+            </GridPane>
+         </children>
+      </AnchorPane>
+      <TabPane nodeOrientation="LEFT_TO_RIGHT" opacity="0.93" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
         <tabs>
           <Tab text="Course Details">
                <content>
                   <VBox spacing="5.0" style="-fx-background-color: #336688; -fx-background-radius: 0;">
                      <children>
-                        <AnchorPane minHeight="0.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #8888FF;">
+                        <AnchorPane nodeOrientation="LEFT_TO_RIGHT" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #8888FF;">
                            <children>
                               <GridPane cacheShape="false" centerShape="false" focusTraversable="true" scaleShape="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <children>
                                     <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Subject:" />
                                     <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Semester:" GridPane.rowIndex="1" />
-                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Number:" GridPane.columnIndex="2" GridPane.halignment="RIGHT" />
-                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Year:" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Number:" GridPane.columnIndex="3" GridPane.halignment="LEFT" />
+                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Year:" GridPane.columnIndex="3" GridPane.halignment="LEFT" GridPane.rowIndex="1" />
                                     <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Title:" GridPane.rowIndex="2" />
                                     <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Instructor Name:" GridPane.rowIndex="3" />
                                     <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Instructor Home:" GridPane.rowIndex="4" />
@@ -46,24 +63,25 @@
                                     <TextField promptText="http://www3.cs.stonybrook.edu/~cse219/Section02/index.html" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="4" />
                                     <ComboBox prefWidth="150.0" promptText="CSE" GridPane.columnIndex="1" />
                                     <ComboBox prefWidth="150.0" promptText="Fall" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                    <ComboBox prefWidth="150.0" promptText="219" GridPane.columnIndex="3" GridPane.halignment="RIGHT" />
-                                    <ComboBox prefWidth="150.0" promptText="2017" GridPane.columnIndex="3" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+                                    <ComboBox prefWidth="150.0" promptText="219" GridPane.columnIndex="4" GridPane.halignment="RIGHT" />
+                                    <ComboBox prefWidth="150.0" promptText="2017" GridPane.columnIndex="4" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
                                     <Text strokeType="OUTSIDE" strokeWidth="0.0" text="aodsjaosidjaoisjdoaisdjoiasjdoiasjdoaijsdoiasjdoiasjdoasjdoasidjaoijdoiajd" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.halignment="LEFT" GridPane.rowIndex="5" />
-                                    <Button mnemonicParsing="false" text="Change" GridPane.columnIndex="3" GridPane.halignment="RIGHT" GridPane.rowIndex="5" />
+                                    <Button mnemonicParsing="false" text="Change" GridPane.columnIndex="4" GridPane.halignment="RIGHT" GridPane.rowIndex="5" />
                                  </children>
                                  <columnConstraints>
-                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="938.9019165039062" prefWidth="411.0934753417969" />
-                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="1777.0434799194336" minWidth="150.0" prefWidth="537.8076171875" />
-                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="1777.0434799194336" minWidth="60.0" prefWidth="493.7978515625" />
-                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="1777.0434799194336" minWidth="150.0" prefWidth="457.2021484375" />
+                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="938.9019165039062" />
+                                    <ColumnConstraints hgrow="SOMETIMES" />
+                                    <ColumnConstraints hgrow="ALWAYS" minWidth="0.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" />
+                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="1777.0434799194336" />
                                  </columnConstraints>
                                  <rowConstraints>
-                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints vgrow="SOMETIMES" />
+                                    <RowConstraints vgrow="SOMETIMES" />
+                                    <RowConstraints vgrow="SOMETIMES" />
+                                    <RowConstraints vgrow="SOMETIMES" />
+                                    <RowConstraints vgrow="SOMETIMES" />
+                                    <RowConstraints vgrow="SOMETIMES" />
                                  </rowConstraints>
                               </GridPane>
                            </children>
