--- a/RyansAppFramework/src/_Experiments_/GoodTry.fxml
+++ b/RyansAppFramework/src/_Experiments_/GoodTry.fxml
@@ -40,7 +40,7 @@
             </GridPane>
          </children>
       </AnchorPane>
-      <TabPane nodeOrientation="LEFT_TO_RIGHT" opacity="0.93" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
+      <TabPane nodeOrientation="LEFT_TO_RIGHT" opacity="0.93" prefHeight="200.0" prefWidth="200.0" stylesheets="@appstyle.css" tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
         <tabs>
           <Tab style="-fx-background-color: #99BBFF;" text="Course Details">
                <content>
