--- a/RyansAppFramework/src/_Experiments_/GoodTry.fxml
+++ b/RyansAppFramework/src/_Experiments_/GoodTry.fxml
@@ -48,9 +48,9 @@
                      <content>
                         <VBox spacing="5.0" style="-fx-background-color: #336688; -fx-background-radius: 0;">
                            <children>
-                              <AnchorPane nodeOrientation="LEFT_TO_RIGHT" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #8888FF;">
+                              <AnchorPane nodeOrientation="LEFT_TO_RIGHT" style="-fx-background-color: #8888FF;">
                                  <children>
-                                    <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                    <VBox prefHeight="180.0" prefWidth="990.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                        <children>
                                           <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" text="Course Details" />
                                           <GridPane cacheShape="false" centerShape="false" focusTraversable="true" scaleShape="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -70,7 +70,7 @@
                                                 <ComboBox prefWidth="150.0" promptText="Fall" style="-fx-background-color: #bddaed;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                                                 <ComboBox prefWidth="150.0" promptText="219" style="-fx-background-color: #bddaed;" GridPane.columnIndex="4" GridPane.halignment="RIGHT" />
                                                 <ComboBox prefWidth="150.0" promptText="2017" style="-fx-background-color: #bddaed;" GridPane.columnIndex="4" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
-                                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="aodsjaosidjaoisjdoaisdjoiasjdoiasjdoaijsdoiasjdoiasjdoasjdoasidjaoijdoiajd" underline="true" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
+                                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="ioiioh" underline="true" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
                                                 <Button mnemonicParsing="false" style="-fx-background-color: #bddaed;" text="Change" GridPane.columnIndex="4" GridPane.halignment="RIGHT" GridPane.rowIndex="5" />
                                              </children>
                                              <columnConstraints>
@@ -93,9 +93,9 @@
                                     </VBox>
                                  </children>
                               </AnchorPane>
-                            <AnchorPane minHeight="0.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #8888FF;">
+                            <AnchorPane nodeOrientation="LEFT_TO_RIGHT" style="-fx-background-color: #8888FF;">
                                  <children>
-                                    <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                    <VBox prefHeight="180.0" prefWidth="990.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                        <children>
                                           <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" text="Site Template" />
                                           <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 11;" text="The selected directory should contain the full site template, including the HTML files " />
@@ -141,9 +141,9 @@
                                     </VBox>
                                  </children>
                               </AnchorPane>
-                              <AnchorPane minHeight="0.0" nodeOrientation="LEFT_TO_RIGHT" style="-fx-background-color: #8888FF;">
+                              <AnchorPane nodeOrientation="LEFT_TO_RIGHT" style="-fx-background-color: #8888FF;">
                                  <children>
-                                    <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                    <VBox prefHeight="140.0" prefWidth="990.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                        <children>
                                           <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" text="Page Style" />
                                           <GridPane cacheShape="false" centerShape="false" focusTraversable="true" prefWidth="998.0" scaleShape="false" VBox.vgrow="ALWAYS">
@@ -178,10 +178,10 @@
                                                 <ColumnConstraints hgrow="SOMETIMES" />
                                              </columnConstraints>
                                              <rowConstraints>
-                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                <RowConstraints vgrow="SOMETIMES" />
+                                                <RowConstraints vgrow="SOMETIMES" />
+                                                <RowConstraints vgrow="SOMETIMES" />
+                                                <RowConstraints vgrow="SOMETIMES" />
                                              </rowConstraints>
                                           </GridPane>
                                           <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 11;" text="NOTE: New stylesheets may be placed in work/css to be selectable" />
