--- a/RyansAppFramework/src/_Experiments_/GoodTry.fxml
+++ b/RyansAppFramework/src/_Experiments_/GoodTry.fxml
@@ -12,7 +12,7 @@
    <children>
       <AnchorPane>
          <children>
-            <GridPane style="-fx-background-color: #775566;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+            <GridPane hgap="5.0" style="-fx-background-color: #6334a8;" vgap="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" />
                   <ColumnConstraints hgrow="SOMETIMES" />
@@ -28,15 +28,74 @@
                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                <Button mnemonicParsing="false" text="New" />
-                  <Button mnemonicParsing="false" text="Load" GridPane.columnIndex="1" />
-                  <Button mnemonicParsing="false" text="Save" GridPane.columnIndex="2" />
-                  <Button mnemonicParsing="false" text="Save As" GridPane.columnIndex="3" />
-                  <Button mnemonicParsing="false" text="Export" GridPane.columnIndex="4" />
-                  <Button mnemonicParsing="false" text="Undo" GridPane.columnIndex="6" GridPane.halignment="RIGHT" />
-                  <Button mnemonicParsing="false" text="Redo" GridPane.columnIndex="7" GridPane.halignment="RIGHT" />
-                  <Button mnemonicParsing="false" text="About" GridPane.columnIndex="8" GridPane.halignment="RIGHT" />
+                <Button mnemonicParsing="false" style="-fx-background-color: #e5d3ff;">
+                     <graphic>
+                        <ImageView fitHeight="40.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../Resources/Icons/New%20copy.png" />
+                           </image>
+                        </ImageView>
+                     </graphic></Button>
+                  <Button mnemonicParsing="false" style="-fx-background-color: #e5d3ff;" GridPane.columnIndex="1">
+                     <graphic>
+                        <ImageView fitHeight="40.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../Resources/Icons/Folder%20copy.png" />
+                           </image>
+                        </ImageView>
+                     </graphic></Button>
+                  <Button mnemonicParsing="false" style="-fx-background-color: #e5d3ff;" GridPane.columnIndex="2">
+                     <graphic>
+                        <ImageView fitHeight="40.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../Resources/Icons/Floppy%20copy.png" />
+                           </image>
+                        </ImageView>
+                     </graphic></Button>
+                  <Button mnemonicParsing="false" style="-fx-background-color: #e5d3ff;" GridPane.columnIndex="3">
+                     <graphic>
+                        <ImageView fitHeight="40.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../Resources/Icons/FloppyDown%20copy.png" />
+                           </image>
+                        </ImageView>
+                     </graphic></Button>
+                  <Button mnemonicParsing="false" style="-fx-background-color: #e5d3ff;" GridPane.columnIndex="4">
+                     <graphic>
+                        <ImageView fitHeight="40.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../Resources/Icons/Export%20copy.png" />
+                           </image>
+                        </ImageView>
+                     </graphic></Button>
+                  <Button mnemonicParsing="false" style="-fx-background-color: #e5d3ff;" GridPane.columnIndex="6" GridPane.halignment="RIGHT">
+                     <graphic>
+                        <ImageView fitHeight="40.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../Resources/Icons/Undo%20copy.png" />
+                           </image>
+                        </ImageView>
+                     </graphic></Button>
+                  <Button mnemonicParsing="false" style="-fx-background-color: #e5d3ff;" GridPane.columnIndex="7" GridPane.halignment="RIGHT">
+                     <graphic>
+                        <ImageView fitHeight="40.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../Resources/Icons/Redo%20copy.png" />
+                           </image>
+                        </ImageView>
+                     </graphic></Button>
+                  <Button mnemonicParsing="false" style="-fx-background-color: #e5d3ff;" GridPane.columnIndex="8" GridPane.halignment="RIGHT">
+                     <graphic>
+                        <ImageView fitHeight="40.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../Resources/Icons/Book%20copy.png" />
+                           </image>
+                        </ImageView>
+                     </graphic></Button>
                </children>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
             </GridPane>
          </children>
       </AnchorPane>
@@ -48,12 +107,15 @@
                      <content>
                         <VBox spacing="5.0" style="-fx-background-color: #336688; -fx-background-radius: 0;">
                            <children>
-                              <AnchorPane nodeOrientation="LEFT_TO_RIGHT" style="-fx-background-color: #8888FF;">
+                              <AnchorPane nodeOrientation="LEFT_TO_RIGHT" style="-fx-background-color: #8888FF; -fx-background-radius: 20,20;">
                                  <children>
-                                    <VBox prefHeight="180.0" prefWidth="990.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                    <VBox prefHeight="251.0" prefWidth="990.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                        <children>
-                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" text="Course Details" />
-                                          <GridPane cacheShape="false" centerShape="false" focusTraversable="true" scaleShape="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" text="Course Details">
+                                             <font>
+                                                <Font name="Arial" size="13.0" />
+                                             </font></Text>
+                                          <GridPane cacheShape="false" centerShape="false" focusTraversable="true" hgap="10.0" scaleShape="false" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                              <children>
                                                 <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Subject:" />
                                                 <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Semester:" GridPane.rowIndex="1" />
@@ -63,15 +125,15 @@
                                                 <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Instructor Name:" GridPane.rowIndex="3" />
                                                 <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Instructor Home:" GridPane.rowIndex="4" />
                                                 <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Export Dir:" GridPane.rowIndex="5" />
-                                                <TextField promptText="Computer Science III" style="-fx-background-color: #bddaed;" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="2" />
-                                                <TextField promptText="Richard McKenna" style="-fx-background-color: #bddaed;" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="3" />
-                                                <TextField promptText="http://www3.cs.stonybrook.edu/~cse219/Section02/index.html" style="-fx-background-color: #bddaed;" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="4" />
-                                                <ComboBox prefWidth="150.0" promptText="CSE" style="-fx-background-color: #bddaed;" GridPane.columnIndex="1" />
-                                                <ComboBox prefWidth="150.0" promptText="Fall" style="-fx-background-color: #bddaed;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                                <ComboBox prefWidth="150.0" promptText="219" style="-fx-background-color: #bddaed;" GridPane.columnIndex="4" GridPane.halignment="RIGHT" />
-                                                <ComboBox prefWidth="150.0" promptText="2017" style="-fx-background-color: #bddaed;" GridPane.columnIndex="4" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+                                                <TextField promptText="Computer Science III" style="-fx-background-color: #bddaed; -fx-background-radius: 30,30;" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="2" />
+                                                <TextField promptText="Richard McKenna" style="-fx-background-color: #bddaed; -fx-background-radius: 30,30;" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="3" />
+                                                <TextField promptText="http://www3.cs.stonybrook.edu/~cse219/Section02/index.html" style="-fx-background-color: #bddaed; -fx-background-radius: 30,30;" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="4" />
+                                                <ComboBox prefWidth="150.0" promptText="CSE" style="-fx-background-color: #bddaed; -fx-background-radius: 30,30;" GridPane.columnIndex="1" />
+                                                <ComboBox prefWidth="150.0" promptText="Fall" style="-fx-background-color: #bddaed; -fx-background-radius: 30,30;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                                <ComboBox prefWidth="150.0" promptText="219" style="-fx-background-color: #bddaed; -fx-background-radius: 30,30;" GridPane.columnIndex="4" GridPane.halignment="RIGHT" />
+                                                <ComboBox prefWidth="150.0" promptText="2017" style="-fx-background-color: #bddaed; -fx-background-radius: 30,30;" GridPane.columnIndex="4" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
                                                 <Text strokeType="OUTSIDE" strokeWidth="0.0" text="ioiioh" underline="true" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
-                                                <Button mnemonicParsing="false" style="-fx-background-color: #bddaed;" text="Change" GridPane.columnIndex="4" GridPane.halignment="RIGHT" GridPane.rowIndex="5" />
+                                                <Button mnemonicParsing="false" style="-fx-background-color: #bddaed; -fx-background-radius: 30,30;" text="Change" GridPane.columnIndex="4" GridPane.halignment="RIGHT" GridPane.rowIndex="5" />
                                              </children>
                                              <columnConstraints>
                                                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="938.9019165039062" />
@@ -90,6 +152,12 @@
                                              </rowConstraints>
                                           </GridPane>
                                        </children>
+                                       <opaqueInsets>
+                                          <Insets />
+                                       </opaqueInsets>
+                                       <padding>
+                                          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                       </padding>
                                     </VBox>
                                  </children>
                               </AnchorPane>
@@ -106,11 +174,11 @@
                                                 <ColumnConstraints hgrow="SOMETIMES" />
                                             </columnConstraints>
                                             <rowConstraints>
-                                                <RowConstraints />
+                                                <RowConstraints vgrow="ALWAYS" />
                                                 <RowConstraints vgrow="ALWAYS" />
                                             </rowConstraints>
                                              <children>
-                                                <Button mnemonicParsing="false" style="-fx-background-color: #bddaed;" text="Change" GridPane.columnIndex="2" GridPane.halignment="RIGHT" />
+                                                <Button mnemonicParsing="false" style="-fx-background-color: #bddaed; -fx-background-radius: 30,30;" text="Change" GridPane.columnIndex="2" GridPane.halignment="RIGHT" />
                                                 <Text strokeType="OUTSIDE" strokeWidth="0.0" text=".\templates\CSE219" underline="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
                                                 <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Template Dir:" />
                                                 <TableView style="-fx-background-color: #AABBCC;" stylesheets="@appstyle.css" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1">
@@ -149,7 +217,7 @@
                                           <GridPane cacheShape="false" centerShape="false" focusTraversable="true" prefWidth="998.0" scaleShape="false" VBox.vgrow="ALWAYS">
                                              <children>
                                                 <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Right Footer Image:" />
-                                                <Button mnemonicParsing="false" style="-fx-background-color: #bddaed;" text="Change" GridPane.columnIndex="2" GridPane.halignment="RIGHT" />
+                                                <Button mnemonicParsing="false" style="-fx-background-color: #bddaed; -fx-background-radius: 30,30;" text="Change" GridPane.columnIndex="2" GridPane.halignment="RIGHT" />
                                                 <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                                                    <image>
                                                       <Image url="@../Resources/Screen%20Shot%202017-04-12%20at%209.21.51%20PM.png" />
@@ -167,10 +235,10 @@
                                                       <Image url="@../Resources/Screen%20Shot%202017-04-12%20at%209.21.51%20PM.png" />
                                                    </image>
                                                 </ImageView>
-                                                <Button mnemonicParsing="false" style="-fx-background-color: #bddaed;" text="Change" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
-                                                <Button mnemonicParsing="false" style="-fx-background-color: #bddaed;" text="Change" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
+                                                <Button mnemonicParsing="false" style="-fx-background-color: #bddaed; -fx-background-radius: 30,30;" text="Change" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+                                                <Button mnemonicParsing="false" style="-fx-background-color: #bddaed; -fx-background-radius: 30,30;" text="Change" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
                                                 <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Stylesheet:" GridPane.rowIndex="3" />
-                                                <ComboBox prefWidth="150.0" promptText="Fall" style="-fx-background-color: #bddaed;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                                <ComboBox prefWidth="150.0" promptText="Fall" style="-fx-background-color: #bddaed; -fx-background-radius: 30,30;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                                              </children>
                                              <columnConstraints>
                                                 <ColumnConstraints hgrow="SOMETIMES" />
