about to add the other tabs

--- a/RyansAppFramework/src/_Experiments_/appstyle.css
+++ b/RyansAppFramework/src/_Experiments_/appstyle.css
@@ -21,6 +21,10 @@
     /*http://stackoverflow.com/questions/10609103/remove-gray-bg-behind-the-tabs-in-jfx/10615258#10615258*/
     /*-fx-effect: null;*/
 }
+.tab:selected
+{
+    -fx-background-color: aqua;
+}
 /*.jabber*/
 /*{*/
     /*-fx-background-color: greenyellow;*/
